feat: adjust in staff and schedules and customerRecord
